--- a/index.html
+++ b/index.html
@@ -28,13 +28,11 @@
        <a class="nav-link "  href="#about"><i class="fa-solid fa-bars pe-3 " ></i> about us</a>
         </li>
       </ul>
-      <form class="d-flex ml-5" role="search">
-        <input class="form-control " type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+
     </div>
   </div>
 </nav>
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light d-block d-lg-none fixed-top">
     <div class="row pl-4 d-sm-flex justify-content-sm-between  w-100">
      <div style="width: 100%; ;">
@@ -62,32 +60,26 @@
           </li>
         </ul>
       </div>
-      <div>
-        <form class="d-flex my-2 my-lg-0  d-sm-block  d-none">
-          <input class="form-control me-sm-2 w-75 " type="text" placeholder="Search">
-          <button class="btn btn-outline-success ml-2 my-sm-0" type="submit">Search</button>
-        </form>
-      </div>
       </div>
     </div>
 </nav>
 
 <!-- jumbotron -->
-<div id="home" class="row align-items-md-stretch mt-4 pt-5">
+<div id="home" class=" align-items-md-stretch mt-4 pt-5">
     <div class= "jumbotron  col-12 ">
         <div
             class="h-100 p-5 text-capitalize ">
             <h2>hello </h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime tempore rem illo dolorum officiis sapiente quaerat aspernatur ipsum eos dolore, explicabo maiores perspiciatis placeat dignissimos saepe alias cumque atque sit!</p>
             <div
-                class="h-100 p-5 ">
+                class="h-100 pt-5 ">
                 <p>
                     <button class="btn btn-primary text-capitalize" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                      Know more about us
                     </button>
                   </p>
-                  <div class="collapse" id="collapseExample">
-                    <div class="card card-body">
+                  <div class="collapse w-100" id="collapseExample">
+                    <div class="card card-body w-100">
                      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde totam nemo qui, atque rerum necessitatibus cum provident a reiciendis adipisci cumque, minus sed vel ad ipsam dicta deleniti recusandae? Praesentium.
                     </div>
                   </div>
@@ -97,52 +89,51 @@
     </div>
 </div>
 <!-- cardes -->
-<div  id="food" style="background-color: rgba(176, 196, 222,.4); padding:100px ; ">
+<div  id="food" style="background-color: rgba(176, 196, 222,.4); padding-top:100px ; ">
   <div class="text-center pt-5">
-
     <h5 class="fa-brands">food section</h5>
   </div>
   <div class="container  mb-5 pb-5 pt-5 ">
-      <div class=" row  justify-content-center align-items-center  text-capitalize">
-          <div class="card  m-1  col-lg-3 col-12 col-6 p-0" >
+      <div class=" row justify-content-center align-items-center  text-capitalize">
+          <div class="card   m-1 col-lg-3 col-md-5 col-sm-10 col-10   p-0" >
               <img class="card-img-top" src="images/OIP (1).jfif" width="100%" height="70%" alt="Title">
               <div class="card-body">
-                <h4 class="card-title fa-brands">fast food</h4>
+                <h4 class="card-title text-capitalize ">fast food</h4>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil accusamus qui molestiae,</p>
               </div>
             </div>
-          <div class="card  m-1 col-lg-3 col-12 col-6 p-0" >
+          <div class="card  m-1   col-lg-3 col-md-5 col-sm-10 col-10  p-0" >
               <img class="card-img-top" src="images/OIP.jfif" width="100%" height="70%" alt="Title">
               <div class="card-body">
-                <h4 class="card-title fa-brands">fast food</h4>
+                <h4 class="card-title text-capitalize ">fast food</h4>
                 <p class="card-text"> officiis impedit doloribus voluptas reiciendis labore incidunt.</p>
               </div>
             </div>
-          <div class="card  m-1 col-lg-3 col-12 col-6 p-0" >
+          <div class="card   m-1 col-lg-3 col-md-5 col-sm-10 col-10   p-0" >
               <img class="card-img-top w-100" src="images/R (1).jfif"  height="50%" alt="Title">
               <div class="card-body">
-                <h4 class="card-title fa-brands">fast food</h4>
+                <h4 class="card-title text-capitalize ">fast food</h4>
                 <p class="card-text"> Eveniet labore quasi magni enim corporis sit odit mollitia aspernatur ullam!</p>
               </div>
             </div>
-          <div class="card  m-1 col-lg-3 col-12 col-6 p-0" >
+          <div class="card   m-1 col-lg-3 col-md-5 col-sm-10 col-10  p-0" >
               <img class="card-img-top" src="images/R (1).jfif" width="100%" height="70%" alt="Title">
               <div class="card-body">
-                <h4 class="card-title fa-brands">fast food</h4>
+                <h4 class="card-title text-capitalize ">fast food</h4>
                 <p class="card-text"> Eveniet labore quasi magni enim corporis sit odit mollitia aspernatur ullam!</p>
               </div>
             </div>
-          <div class="card m-1 col-lg-3 col-12 col-6 p-0" >
+          <div class="card  m-1 col-lg-3 col-md-5 col-sm-10 col-10   p-0" >
               <img class="card-img-top" src="images/OIP (1).jfif" width="100%" height="70%" alt="Title">
               <div class="card-body">
-                <h4 class="card-title fa-brands" fa-brands>fast food</h4>
+                <h4 class="card-title text-capitalize " fa-brands>fast food</h4>
                 <p class="card-text"> Eveniet labore quasi magni enim corporis sit odit mollitia aspernatur ullam!</p>
               </div>
             </div>
-          <div class="card  m-1 col-lg-3 col-12 col-6 p-0" >
+          <div class="card  m-1 col-lg-3 col-md-5 col-sm-10 col-10  p-0" >
               <img class="card-img-top" src="images/thumb-1920-380966.jpg" width="100%" height="70%" alt="Title">
               <div class="card-body">
-                <h4 class="card-title fa-brands">fast food</h4>
+                <h4 class="card-title text-capitalize ">fast food</h4>
                 <p class="card-text"> Eveniet labore quasi magni enim corporis sit odit mollitia aspernatur ullam!</p>
               </div>
             </div>
